--- a/gb/22/9/8/n13820237.md
+++ b/gb/22/9/8/n13820237.md
@@ -26,37 +26,37 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/7/n13819361.md#1">习近平两年半首次出国 为何选中亚不选美欧</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/7/n13819596.md#1">美国成功试射“民兵III型”洲际弹道导弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900971.md#1">美国再军援乌克兰38亿之际 两参议员访基辅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901141.md#1">美再向乌克兰和欧盟提供38亿美元军事援助</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964354.md#1">川普今日飞纽约 明天将出庭接受传讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964359.md#1">组图：美菲举行联合军演 逾3千名士兵参加</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10262441.md#1" target="_blank">张敏：王同竹之死——“文革”焚书坑儒一例</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9355207.md#1" target="_blank">一位美国微软工程师修炼法轮功的故事</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232283.md#1" target="_blank">北虹：我心中的那道伤痕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899505.md#1">【环球直击】为中共窃密 前通用工程师被判刑两年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900272.md#1">【传统音乐】2022飞天艺术学院器乐大赛金奖独奏音乐会（1）梁玉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900365.md#1">【新闻看点】习近平被迫掉头 几个讯号令他震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898850.md#1">告别荒诞2022——北京某教授最犀利嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898823.md#1">王友群：习近平2023年面临四大挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899515.md#1">女网重申先解决彭帅性侵案 再考虑中国赛事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898840.md#1">范冰冰晒无名指戴巨型红宝石 被传好事近了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899526.md#1">梁朝伟戴公仔头套滑雪 获网友大赞“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898066.md#1">加拿大新唐人将推出奇幻电影《再次成为神》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898809.md#1">黄磊确诊十多天未痊愈 透露演员老父还在医院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899955.md#1">KID报喜当爸爸 “亲剪脐带”全程跟拍儿子诞生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896472.md#1">增强免疫力的6种有效方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896469.md#1">癌症术后15年未复发 日本医生分享5秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898889.md#1">预防“沉默杀手” 留意肾脏病 5大症状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891163.md#1">研究：吃盐太少可能和太多一样有危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893567.md#1">研究：忧郁患者都缺“镁”这营养素不可轻忽</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/8/n13820237.htm">美国宣布给乌克兰等国家27亿美元军事援助</a></p><hr>
