--- a/gb/23/3/19/n13953827.md
+++ b/gb/23/3/19/n13953827.md
@@ -6,8 +6,8 @@
 <h6>曾文水库资料照。（赖友容／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年03月19日讯】（大纪元记者张原彰台湾台北报导）中南部久旱没下雨，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%83%85.md#1">水情</a>拉紧报，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9B%BE%E6%96%87%E6%B0%B4%E5%BA%93.md#1">曾文水库</a>蓄水量仅11%，中央气象局长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E6%98%8E%E5%85%B8.md#1">郑明典</a>表示，今年的水情恐怕会非常、非常紧张；日月潭近期水位直直落，潭区的“神秘黑洞”日月潭溢流井，建筑本体也都露出来。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E6%98%8E%E5%85%B8.md#1">郑明典</a>说，以目前中南部水库的蓄水量，和2021年相比，中部主要水库<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%83%85.md#1">水情</a>虽然好一些，但南部主要水库几乎和2021年一样。</p>
+<p>【大纪元2023年03月19日讯】（大纪元记者张原彰台湾台北报导）中南部久旱没下雨，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%83%85.md#1">水情</a>拉紧报，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9B%BE%E6%96%87%E6%B0%B4%E5%BA%93.md#1">曾文水库</a>蓄水量仅11%，中央气象局长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E6%98%8E%E5%85%B8.md#1">郑明典</a>表示，今年的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B0%B4%E6%83%85.md#1">水情</a>恐怕会非常、非常紧张；日月潭近期水位直直落，潭区的“神秘黑洞”日月潭溢流井，建筑本体也都露出来。</p>
+<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%83%91%E6%98%8E%E5%85%B8.md#1">郑明典</a>说，以目前中南部水库的蓄水量，和2021年相比，中部主要水库水情虽然好一些，但南部主要水库几乎和2021年一样。</p>
 <p>郑明典表示，“有2021的经验，感觉可以处理，但是会非常、非常紧张。”</p>
 <p>据台湾水库即时水情资料显示，截至19日，北部翡翠水库蓄水量达79.9%；但中部蓄水量最高的德基水库有58.7%，日月潭水库56.4%，明德水库只有35%；南部<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9B%BE%E6%96%87%E6%B0%B4%E5%BA%93.md#1">曾文水库</a>更仅剩11.2%。</p>
 <p>日月潭近期配合供应农业用水，导致水位直直落，19日水位降至741.1公尺，距离满水位748.48公尺水位大降超过7公尺。潭区的“神秘黑洞”日月潭溢流井，建筑本体也都露出来，成为旱象奇观。</p>
@@ -24,41 +24,41 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/3/n13135404.md#1">曾文水库快撑饱 泄洪速度加快中</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/7/n13145796.md#1">西南气流袭台 曾文水库3天泄洪1个日月潭</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924623.md#1">曾文水库3天人工增雨2次 高市水情转提醒绿灯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953826.md#1">台年轻人出国重CP值 搭廉航飞日本居多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953769.md#1">台北标线人行道断点多 议员批行人地狱真实版</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953766.md#1">电价调涨 台立委提三配套方案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951715.md#1">1.7万人放无薪假 制造业占九成</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951709.md#1">清明假期疏运需求大 双铁再加开班次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951698.md#1">普发现金 5管道领取 有望清明节后入账</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964452.md#1">曾文水库蓄水量11.33% 台南设回收水取水供应站</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964402.md#1">台连假倒数2天 高公局估国道13处路段壅塞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963880.md#1">清明疏运出状况！台高铁再传集电弓异常下降 延误3列车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963883.md#1">连假第3日 台公路总局预估车潮路段</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963885.md#1">润饼热量高 台国健署提清明吃润饼五原则</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962693.md#1">房东将涨电价？ 台内政部：租赁期间不能单方面调整</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/1/n11760806.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9927251.md#1" target="_blank">澄清长江日报诽谤文章 武汉退休干部的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951783.md#1">挣脱监控 新西兰中领馆出逃员工心路历程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947935.md#1">才能出众护国大将军 因一句话遭现世报而绝嗣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950328.md#1">【未解之谜】消失的《小人国》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949664.md#1">历史中的绝代风华（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952618.md#1">【环球直击】TikTok安全隐患风波 新西兰议会禁用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953269.md#1">【财商天下】全球银行连环爆 瑞士信贷再崩盘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953227.md#1">【新唐人大视野】人大报告删4字 美官员知原因？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950100.md#1">习近平连任后确定访俄 专家析背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952140.md#1">习近平是个好领导吗？中国AI机器人不敢答</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13951986.md#1">【新唐人大视野】李强如何上位？党媒发文泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951916.md#1">60岁许效舜考上博士班 自曝被教授一句话吓傻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951954.md#1">离婚一年半晒与汪涵合照 欧弟暴瘦引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952639.md#1">杨紫琼封后被说华人之光 黄秋生质疑用词获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953323.md#1">大陆配音圈大地震 姜广涛等4人被爆涉刑事犯罪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951896.md#1">香港导演会颁奖 郑秀文凭《流水落花》再封后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950060.md#1">抗炎抗氧化 便宜又好吃的9种超级食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952064.md#1">银行接连倒 美国房市会不会崩？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952146.md#1">心理医师：四种自然方法缓解紧张焦虑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952314.md#1">床单存放不当会招致臭味 专家告诉你诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944003.md#1">吃出“业务力” 真正的决胜点往往在餐桌上</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/19/n13953827.htm">曾文水库蓄水量剩11% 郑明典：水情非常紧张</a></p><hr>
